create userlib with entry point _start to setup stack

--- a/progs/idle/Makefile
+++ b/progs/idle/Makefile
@@ -4,6 +4,13 @@ S_FILES =
 
 include ../../config.mk
 LDSCRIPT = ../../ldscripts/program.ld
+USERLIB  = ../../userlib/libuser.a
+
+ifeq ($(DEBUG),1)
+CFLAGS += -g -O0
+else
+CFLAGS += -O$(OPT)
+endif
 
 C_OBJS = $(patsubst %.c,%.o,$(C_FILES))
 S_OBJS = $(patsubst %.S,%.o,$(S_FILES))
@@ -14,7 +21,7 @@ program: $(NAME).elf
 	$(LD) -r -b binary $< -o $@
 
 $(NAME).elf: $(OBJS)
-	$(LD) -T $(LDSCRIPT) $(OBJS) -o $@
+	$(LD) -T $(LDSCRIPT) $(USERLIB) $(OBJS) -o $@
 
 %.o: %.S
 	$(CC) $(SFLAGS) -c $< -o $@
