--- a/progs/ehci/Makefile
+++ b/progs/ehci/Makefile
@@ -1,6 +1,7 @@
 NAME = ehci
-C_FILES = ehci.c
+C_FILES =
 S_FILES =
+DATS_FILES = ehci.dats
 
 include ../../config.mk
 LDSCRIPT = ../../ldscripts/program.ld
@@ -16,10 +17,15 @@ CFLAGS += $(USER_CFLAGS) -Wno-attributes
 SFLAGS +=
 LDFLAGS += -r $(USER_LDFLAGS)
 
+ATSFLAGS += -IATS ../../include
+ATSCFLAGS += -D_ATS_HEADER_NONE -D_ATS_PRELUDE_NONE -I$$ATSHOME -Wno-unused-function -Wno-unused-label
+
 C_OBJS = $(patsubst %.c,%.o,$(C_FILES))
 S_OBJS = $(patsubst %.S,%.o,$(S_FILES))
-OBJS = $(C_OBJS) $(S_OBJS)
-DFILES = $(patsubst %.c,%.d,$(C_FILES)) $(patsubst %.S,%.d,$(S_FILES))
+DATS_OBJS = $(patsubst %.dats,%_dats.o,$(DATS_FILES))
+ATSCTEMPS = $(patsubst %.dats,%_dats.c,$(DATS_FILES))
+OBJS = $(C_OBJS) $(S_OBJS) $(DATS_OBJS)
+DFILES = $(patsubst %.c,%.d,$(C_FILES)) $(patsubst %.S,%.d,$(S_FILES)) $(patsubst %.dats,%_dats.d,$(DATS_FILES))
 
 program: $(NAME).elf
 	$(LD) -r -b binary $< -o $@
@@ -30,9 +36,13 @@ $(NAME).elf: $(OBJS)
 %.o: %.S
 	$(CC) $(SFLAGS) -c $< -o $@
 
+%_dats.o: %.dats
+	$(ATSOPT) $(ATSFLAGS) --output $(patsubst %.dats,%_dats.c,$<) --dynamic $<
+	$(CC) $(ATSCFLAGS) $(CFLAGS) -o $@ -c $(patsubst %.dats,%_dats.c,$<)
+
 .PHONY: clean distclean
 clean:
-	rm -f $(OBJS) program $(NAME).elf
+	rm -f $(OBJS) $(ATSCTEMPS) program $(NAME).elf
 distclean: clean
 	rm -f $(DFILES)
 
