add -ffreestanding to flags
apparently this is the proper indication to GCC of a "freestanding" environment

--- a/progs/ehci/Makefile
+++ b/progs/ehci/Makefile
@@ -13,7 +13,7 @@ else
 CFLAGS += -O$(OPT)
 endif
 
-CFLAGS += $(USER_CFLAGS) -Wno-attributes
+CFLAGS += $(USER_CFLAGS) -Wno-attributes -ffreestanding
 SFLAGS +=
 LDFLAGS += -r $(USER_LDFLAGS)
 
