changes needed to switch to ATS2/Postiats compiler

--- a/progs/ehci/Makefile
+++ b/progs/ehci/Makefile
@@ -18,7 +18,7 @@ SFLAGS +=
 LDFLAGS += -r $(USER_LDFLAGS)
 
 ATSFLAGS += -IATS ../../include -IATS ../../userlib
-ATSCFLAGS += -D_ATS_HEADER_NONE -D_ATS_PRELUDE_NONE -I$$ATSHOME -Wno-unused-function -Wno-unused-label -I../../userlib -I../../include
+ATSCFLAGS += -I../../userlib -I../../include $(USER_ATSCFLAGS)
 
 C_OBJS = $(patsubst %.c,%.o,$(C_FILES))
 S_OBJS = $(patsubst %.S,%.o,$(S_FILES))
