rework USB types so far

--- a/userlib/Makefile
+++ b/userlib/Makefile
@@ -15,7 +15,7 @@ endif
 CFLAGS +=
 
 C_FILES = printf.c arm.c freestanding.c
-DATS_FILES = fourslot.dats fourslot2w.dats ipcmem.dats multireader.dats fixedslot.dats # usb.dats
+DATS_FILES = fourslot.dats fourslot2w.dats ipcmem.dats multireader.dats fixedslot.dats usb.dats
 
 C_OBJS = $(patsubst %.c,%.o,$(C_FILES))
 DATS_OBJS = $(patsubst %.dats,%_dats.o,$(DATS_FILES))
