whatever it took to get pings working

--- a/progs/smsclan/Makefile
+++ b/progs/smsclan/Makefile
@@ -1,5 +1,5 @@
 NAME = smsclan
-C_FILES =
+C_FILES = uip/clock-arch.c
 S_FILES = smsclan_start.S
 DATS_FILES = smsclan.dats
 
@@ -24,7 +24,7 @@ C_OBJS = $(patsubst %.c,%.o,$(C_FILES))
 S_OBJS = $(patsubst %.S,%.o,$(S_FILES))
 DATS_OBJS = $(patsubst %.dats,%_dats.o,$(DATS_FILES))
 ATSCTEMPS = $(patsubst %.dats,%_dats.c,$(DATS_FILES))
-OBJS = $(C_OBJS) $(S_OBJS) $(DATS_OBJS)
+OBJS = $(C_OBJS) $(S_OBJS) $(DATS_OBJS) uip/uip.a
 DFILES = $(patsubst %.c,%.d,$(C_FILES)) $(patsubst %.S,%.d,$(S_FILES)) $(patsubst %.dats,%_dats.d,$(DATS_FILES))
 
 program: $(NAME).elf
@@ -40,9 +40,14 @@ $(NAME).elf: $(OBJS)
 	$(ATSOPT) $(ATSFLAGS) --output $(patsubst %.dats,%_dats.c,$<) --dynamic $<
 	$(CC) $(ATSCFLAGS) $(CFLAGS) -o $@ -c $(patsubst %.dats,%_dats.c,$<)
 
+uip/uip.a:
+	$(MAKE) -C uip
+
 .PHONY: clean distclean
 clean:
 	rm -f $(OBJS) $(DFILES) $(ATSCTEMPS) program $(NAME).elf
+	$(MAKE) -C uip clean
+
 distclean: clean
 	rm -f $(DFILES)
 
